samples/_failures_safe/1761288097_04ddb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac32d7f2.c: In function ‘main’:
./samples/SAFE/__tmp_ac32d7f2.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
